# WordDictWebServer

./: README-CN.md  README.md
doc/: (数据库设计)DataBase_design.md  architecture-design.md
src/: CMakeLists.txt
src/client/: http_client.cpp
src/dict_test/: dict_test_main.cpp
src/dict_tool/: dict_tool_main.cpp  json_dict_main.cpp
src/include/base/: CDictDatabaseInterface.hpp  CDictDatabaseJson.cpp  CDictDatabaseJson.hpp  CDictDatabaseMySql.cpp  CDictDatabaseMySql.hpp  CDictDatabaseSqlite.cpp  CDictDatabaseSqlite.hpp  dict_tool.cpp  dict_tool.hpp  error_code.cpp  error_code.hpp  version_base.cpp  version_base.hpp  word_dict_struct.cpp  word_dict_struct.hpp
src/server/: CAsioHttpServer.cpp  CAsioHttpServer.hpp  CCppHttpLibServer.cpp  CCppHttpLibServer.hpp  CHttpServerInterface.cpp  CHttpServerInterface.hpp  EnglishChineseWordDict.cpp  EnglishChineseWordDict.h  cpp_http_main.cpp  http_server.cpp  version_test.cpp
